--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="text-3xl font-extrabold mb-5">Professional Hockeys CLub</h2>
         <div class="grid place-content-center"><p class="w-3/4 ml-16 text-xs font-medium"> check out our latest products from the given options and check the details as of your requirements</p></div>
       </div>
-      <div class=" flex-col lg:flex gap-5 mt-20">
+      <div class="flex max-md:flex-col gap-5 mt-20">
         <div class="text-center max-lg:mb-5">
           <div class="radial-progress text-[#FF4240]" style="--value:70;" role="progressbar"><p class="text-black font-extrabold text-xl">70%</p></div>
            <h2 class="mt-4 text-xl font-semibold">Prayer Facility</h2>
@@ -125,7 +125,7 @@
       <h2 class="text-2xl lg:text-3xl font-extrabold mb-5">Program Sections</h2>
       <div class="grid place-content-center"><p class="w-3/4 ml-16 text-xs font-medium"> check out our latest products from the given options and check the details as of your requirements</p></div>
     </div>
-    <div class="flex-col lg:flex gap-5">
+    <div class="flex max-md:flex-col">
       <div class="bg-[url('Images/2.png')] bg-no-repeat rounded-2xl w-full px-8 pb-8 pt-10 text-white">
         <h3 class="text-3xl font-extrabold lg:mt-14">Junior Program</h3>
         <p class="text-base font-medium mt-4">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
@@ -481,7 +481,8 @@
       </div>
     </section>
   </main>
-  
+
+
   <!-- footer section -->
   <footer>
     <div class="text-center bg-[#13131808] p-7 rounded-lg mt-8">
